# userecho

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.demo  GEMINI.md  README.md  SECURITY.md  check_data.py  commit_log.txt  docker-compose.demo.yml  docker-compose.dokploy.yml  lefthook.yml  package.json  pnpm-lock.yaml  test_feedbacks.xlsx  test_feedbacks_100.xlsx  test_redis_connection.py
server/: .env.demo  .gitignore  .pre-commit-config.yaml  .ruff.toml  add_system_menus.py  add_task_center_menu.py  analyze_migrations.py  assign_system_admin.py  board_count_after_fix.txt  board_count_diagnosis.txt  board_order_result.txt  boards_output.txt  chain_report.txt  check_admin_exists.py  check_and_fix.py  check_board_order.py  check_chain.py  check_clustering_data.py  check_clustering_quality.py  check_current_status.py  check_db_locks.py  check_dependencies.py  check_imports.py  check_imports.sh  check_login_config.py  check_role_menu.py  check_similar_topics.py  check_system_menus_issue.py  check_task_center_menu.py  check_task_menus.py  check_triggers.py  check_volcengine_config.py  clean_duplicate_board.sql  clean_output.txt  clean_output2.txt  commit_final_log.txt  commit_log.txt  commit_v19.txt  commit_v20.txt  commit_v21.txt  (+96 more)
server/backend/: .env.example  .gitignore  DATABASE_INIT.md  DATABASE_INIT_SUMMARY.md  DEMO_SETUP_GUIDE.md  INIT_COMPLETE_DATABASE.md  INIT_SCRIPT_OPTIMIZATION.md  QUICK_INIT.md  QUICK_INIT_SUMMARY.md  QUICK_START.md  SCRIPTS_README.md  TIMESTAMP_FIX.md  __init__.py  cli.py  create_test_users.bat  create_test_users.sh  diagnose_connection.py  fix_models.py  init_complete_database.bat  init_complete_database.sh  init_data.ps1  init_data.sh  init_data_only.py  init_database.bat  init_database.sh  init_demo_data_only.sh  init_demo_environment.sh  main.py  migration_log.txt  run.py  setup_demo_full.sh  temp_remove_title.py  test_ai.bat  test_ai.sh  test_celery_logging.sh  test_db_connection.py  test_db_connection_simple.py  verify_data.py  verify_database.bat  verify_database.sh
server/backend/alembic/: env.py
server/backend/alembic/versions/: 2025-12-21-15_15_51-9a2de98df5fb_create_feedalyze_tables.py  2025-12-21-15_15_51-9a2de98df5fb_create_userecho_tables.py  2025-12-22-01_add_role_type_and_update_menu_paths.py  2025-12-22-18_50_00-add_timestamps_to_feedalyze_tables.py  2025-12-22-18_50_00-add_timestamps_to_userecho_tables.py  2025-12-22-23_00_00-add_embedding_vector_field.py  2025-12-23-13_00_00-add_clustering_status_and_topic_centroid.py  2025-12-24-20_39_41-f8b29330fc5d_add_clustering_status_and_centroid.py  2025-12-24-23_08_15-27752692c03c_update_embedding_dimension_to_4096.py  2025-12-25-14_00_00-add_tenant_config_table.py  2025-12-28-08_02_05-71cc2d84933e_add_screenshot_fields_to_feedback.py  2025-12-28-16_00_00-add_insights_and_sentiment.py  2025-12-28-17_00_00-add_insights_deleted_at.py  2025-12-29-10_00_00-add_fulltext_search_indexes.py  2025-12-29-11_00_00-add_topic_fulltext_search_indexes.py  (+30 more)
server/backend/app/: router.py
server/backend/common/: context.py  enums.py  i18n.py  log.py  model.py  pagination.py  schema.py
server/backend/core/: conf.py  path_conf.py  registrar.py
server/backend/database/: db.py  redis.py
server/backend/docs/: database-migrations.md
server/backend/middleware/: DEBUG_MIDDLEWARE_IMPLEMENTATION.md  DEBUG_MIDDLEWARE_README.md  access_middleware.py  debug_middleware.py  i18n_middleware.py  jwt_auth_middleware.py  opera_log_middleware.py
server/backend/plugin/: tools.py
server/backend/scripts/: MIGRATION_GUIDE.md  README.md  _env_setup_snippet.py  add_missing_system_menus.py  add_missing_system_menus.sql  add_screenshot_fields.py  add_screenshot_menu_permission.py  add_settings_menus.py  assign_boss_system_role.py  check_alembic_version.py  check_all_menus.py  check_boards.py  check_boss_system_roles.py  check_boss_tenant.py  check_screenshot_fields.py  check_settings_menus.py  check_system_menus.py  check_system_submenus.py  check_tables.py  check_tenant_user_roles.py  cleanup_credits_permission.py  cleanup_orphan_tenant.py  clear_boss_cache.py  create_demo_users.py  create_test_users.py  debug_board_api.py  debug_menus.py  diagnose_tenant_issue.py  diagnose_tenant_user.py  drop_all_tables.py  fix_alembic_state.py  fix_boss_tenant.py  fix_invitation_menu_path.py  fix_sysadmin_permission.py  fix_updated_time.py  fix_userecho_menu_paths.py  import_base_data.py  init_business_menus.py  init_business_permissions.py  init_default_tenant.py  (+31 more)
server/backend/utils/: _await.py  ai_client.py  build_tree.py  clustering.py  demo_site.py  dynamic_config.py  encrypt.py  file_ops.py  health_check.py  import_parse.py  otel.py  re_verify.py  redis_info.py  request_parse.py  serializers.py  server_info.py  snowflake.py  storage.py  timezone.py  trace_id.py  uuid.py
server/docs/: network-troubleshooting.md
server/scripts/: add_board_stats_triggers.py  install_fulltext_index.sh  verify_board_stats_triggers.py  verify_fulltext_index.py
server/scripts/embedding_comparison/: 00_verify_config.py  01_prepare_annotation_dataset.py  02_compare_embedding_models.py  03_test_clustering_quality.py  QUICKSTART.md  QWEN_INTEGRATION.md  README.md  check_tenant_data.py  compare_clustering_algorithms.py  compare_clustering_providers.py  find_board.py  generate_test_data.py  run_all.sh  visualize_clustering.py
(+718 files in other folders)
