[project]
name = "fastapi_best_architecture"
description = """
A RBAC (Role-Based Access Control) permission control system built on FastAPI, featuring a unique pseudo-three-tier
architecture design, with built-in basic implementation of fastapi admin as a template library, free and open-source.
"""
authors = [
    { name = "Wu Clan", email = "jianhengwu0407@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dynamic = ['version']
dependencies = [
    "aiosmtplib>=3.0.2",
    "alembic>=1.17.2",
    "asgiref>=3.11.0",
    "asyncmy>=0.2.10",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "cappa>=0.30.4",
    "celery>=5.6.0",
    # When celery version < 6.0.0
    # https://github.com/celery/celery/issues/7874
    "celery-aio-pool>=0.1.0rc8",
    "cryptography>=46.0.3",
    "dulwich>=0.24.10",
    "fast-captcha>=0.3.2",
    "fastapi-limiter>=0.1.6",
    "fastapi-oauth20>=0.0.2",
    "fastapi-pagination>=0.15.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.123.5",
    "flower>=2.0.1",
    "gevent>=25.9.1",
    "granian>=2.6.0",
    "ip2loc>=1.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "msgspec>=0.20.0",
    "numpy>=1.26.0",
    "openai>=1.67.0",
    "openpyxl>=3.1.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.0",
    "pandas>=2.2.0",
    "opentelemetry-instrumentation-fastapi>=0.60b0",
    "opentelemetry-instrumentation-logging>=0.60b0",
    "opentelemetry-instrumentation-redis>=0.60b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b0",
    "opentelemetry-sdk>=1.39.0",
    "pgvector>=0.4.0",
    "prometheus-client>=0.23.1",
    "psutil>=7.1.3",
    # https://github.com/fastapi-practices/fastapi_best_architecture/issues/887
    "psycopg[binary]==3.2.10",
    "pwdlib>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-socketio>=5.15.0",
    "redis[hiredis]>=7.1.0",
    "rtoml>=0.13.0",
    "scikit-learn>=1.5.0",
    "sqlalchemy-crud-plus>=1.13.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlparse>=0.5.4",
    "starlette-context>=0.4.0",
    "typing-extensions>=4.15.0",
    "user-agents>=2.2.0",
    # Object Storage SDKs
    "oss2>=2.19.0",  # Aliyun OSS
    "cos-python-sdk-v5>=1.9.40",  # Tencent COS
    "boto3>=1.42.0",  # AWS S3
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-sugar>=1.1.1",
]
lint = [
    "pre-commit>=4.5.1",
    "prek>=0.2.19",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "types-pyyaml>=6.0.12",
    "types-psutil>=6.1.0",
    "boto3-stubs>=1.35.90",
]
server = [
    "wait-for-it>=2.3.0",
]

[tool.uv]
python-downloads = "manual"
default-groups = ["dev", "lint"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.version]
path = "backend/__init__.py"

[project.scripts]
fba = "backend.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
# pre-commit 可能传递包含 server/ 前缀的路径
exclude = [
    '(?:server[\\/])?backend[\\/]scripts[\\/].*',
    '(?:server[\\/])?backend[\\/]temp_.*',
    '(?:server[\\/])?scripts[\\/].*',
    '(?:server[\\/])?check_.*\.py',
    '(?:server[\\/])?test_.*\.py',
]

# 忽略复杂的后台管理和插件模块 (分阶段修复中)
[[tool.mypy.overrides]]
module = [
    "backend.*",
    "server.backend.*",
    "server.*",
    "scripts.*",
    "alembic.*",
    "check_chain",
    "check_dependencies",
    "diagnose_db_connections",
    "test_board_api",
    "test_db_connection_simple",
    "diagnose_connection",
    "verify_init",
    "init_business_permissions",
    "fix_updated_time",
    "cleanup_credits_permission",
    "fix_userecho_menu_paths",
    "add_settings_menus",
    "update_role_menus",
    "move_board_to_default_tenant",
    "init_demo_data",
]
disable_error_code = ["return-value", "arg-type", "assignment", "union-attr", "attr-defined", "index", "valid-type", "var-annotated", "misc", "has-type", "operator", "call-overload", "return", "no-redef", "dict-item"]
ignore_errors = true
[[tool.mypy.overrides]]
module = [
    "celery.*",
    "sqlalchemy_crud_plus.*",
    "fast_captcha.*",
    "ip2loc.*",
    "user_agents.*",
    "dulwich.*",
    "pwdlib.*",
    "msgspec.*",
    "jieba.*",
    "pgvector.*",
    "sklearn.*",
    "oss2.*",
    "qcloud_cos.*",
    "asyncpg.*",
    "celery_aio_pool.*",
]
ignore_missing_imports = true
# 允许无类型定义的第三方库
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "backend.app.*.api.v1.*",
    "backend.plugin.*.api.v1.*",
]
disable_error_code = ["arg-type", "assignment", "index", "union-attr"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "ANN",
    "FBT",
    "C901",
    "DTZ",
    "TRY",
    "FURB",
    "E501",
    "E402",
    "E722",
    "N815",
    "N806",
    "D417",
    "RUF",
]
